kubernetes/apps/base/llm/toolhive/config/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway
  annotations:
    gatus.home-operations.com/endpoint: |
      conditions: ["[STATUS] == 401"]
spec:
  hostnames:
    - mcp.jory.dev
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway-internal
          port: 4483
